<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">hang</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="icon">Icon (Optional)</string>
    <string name="finished">Finished</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="create_new_proposal">Create new Proposal</string>
    <string name="title_activity_set_status">SetStatusActivity</string>
    <string name="title_activity_create_proposal">CreateProposalActivity</string>
    <string name="now">Now</string>
    <string name="later">Later</string>
    <string name="broadcast_new_proposal">Broadcast New Proposal</string>
    <string name="what_do_you_want_to_do">What do you want to do?</string>
    <string name="where">Where? (optional)</string>
    <string name="how_soon_now">Now</string>
    <string name="how_soon_in_15">In 15</string>
    <string name="how_soon_in_30">In 30</string>
    <string name="how_soon_1_hr">1 Hr</string>
    <string name="when">When?</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="at">at:</string>
    <string name="proposal">Proposal: </string>
    <string name="set_status">Set Status</string>
    <string name="update_my_availability">Update My Availability</string>
    <string name="outgoing">Outgoing</string>
    <string name="incoming">Incoming</string>
    <string name="manage_broadcasts">Manage Broadcasts</string>
    <string name="add_outgoing_broadcast">Add Outgoing Broadcast</string>
    <string name="new_broadcast_phone_number">New Broadcast Phone Number</string>
    <string name="loading"></string>
    <string name="update_your_status">No status.</string>
    <string name="nudge_this_user">Click to nudge me</string>
    <string name="char_limit"> (%d char limit)</string>
    <string name="home">Home</string>
    <string name="no_user_name">No user name</string>
    <string name="no_user_availability">No Availability</string>
    <string name="free">free</string>
    <string name="busy">busy</string>
    <string name="how_long_will_you_be_free">How long will you be free?</string>
    <string name="when_will_you_be_free">When will you be free?</string>
    <string name="start_broadcasting">Start Broadcasting</string>
    <string name="stop_broadcasting">Stop Broadcasting</string>
    <string name="proposal_description">Proposal Description</string>
    <string name="proposal_location">Proposal Location</string>
    <string name="filter_broadcast">Filter</string>
    <string name="unfilter_broadcast">Unfilter</string>
    <string name="today_at">Today at</string>
    <string name="tomorrow_at">Tomorrow at</string>
    <string name="delete_proposal">Delete My Proposal</string>
    <string name="no_incoming_broadcasts">No Incoming Broadcasts.</string>
    <string name="no_outgoing_broadcasts">No Outgoing Broadcasts.</string>
    <string name="chat">Chat</string>
    <string name="roster">Roster</string>
    <string name="interested">Interested</string>
    <string name="confirmed">Confirmed</string>
    <string name="send">Send</string>
    <string name="description">Description</string>
    <string name="description_hint">Enter proposal description</string>
    <string name="no_description">No description</string>
    <string name="location">Location</string>
    <string name="location_hint">Enter proposal location </string>
    <string name="no_location">No location</string>
    <string name="time">Time</string>
    <string name="no_time">No time</string>
    <string name="im_interested">I\'m interested.</string>
    <string name="im_down">I\'m down.</string>
    <string name="connect_with_facebook">Connect with Facebook</string>
    <string name="error_dialog_title">Error</string>
    <string name="error_dialog_button_text">OK</string>
    <string name="add_outgoing_broadcasts">Add Outgoing Broadcasts</string>
    <string name="get_started">To get started, log in using Facebook</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="start_time">Start Time</string>
    <string name="logout">Logout</string>
    <string name="my_profile">My Profile</string>
    <string name="done">Done</string>
    <string name="outgoing_broadcasts">Outgoing Broadcasts</string>
    <string name="incoming_broadcasts">Incoming Broadcasts</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="confirm_proposal">Confirm Proposal?</string>
    <string name="confirm_proposal_button">Post</string>
    <string name="my_current_availability">My Current Availability</string>
    <string name="my_current_proposal">My Current Proposal</string>
    <string name="unknown_proposal">Unknown Proposal</string>
    <string name="someones_proposal">%s\'s current Proposal</string>
    <string name="refresh">Refresh</string>
    <string name="confirm_delete_proposal">Delete this proposal?</string>
    <string name="remove_proposal_button">Delete Proposal</string>
    <string name="cancel">Cancel</string>
    <string name="no_proposal">No Proposal</string>
    <string name="click_icon_to_nudge">Click icon to nudge</string>
    <string name="nudged">Nudged.</string>
    <string name="my_availability">My Availability</string>
    <string name="my_proposal">My Proposal</string>
    <string name="champagne_limousines_bold">assets/fonts/champagne_limousines_bold.ttf</string>
    <string name="champagne_limousines">assets/fonts/champagne_limousines.ttf</string>
    <string name="availabile">Available</string>
    <string name="no_proposals">No Proposals.</string>
    <string name="count_interested">%d interested</string>
    <string name="tough_luck"><u>Tough luck</u></string>
    <string name="custom_user_icon">custom user icon</string>

</resources>