<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <View
        android:id="@+id/separatorIncomingOutgoingButtonsFromEachOther"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textViewFriendName"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:layout_toRightOf="@+id/profilePictureView"
        android:focusable="false"
        android:paddingBottom="1dp"
        android:paddingTop="1dp"
        android:text="@string/no_user_name"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="14sp" />

    <com.facebook.widget.ProfilePictureView
        android:id="@+id/profilePictureView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/profile"
        android:src="@drawable/ic_action_profile_icon" >
    </com.facebook.widget.ProfilePictureView>

    <TextView
        android:id="@+id/textViewProposalsCellDescription"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignLeft="@+id/textViewFriendName"
        android:layout_below="@+id/profilePictureView"
        android:focusable="false"
        android:paddingBottom="1dp"
        android:paddingTop="1dp"
        android:text="@string/proposal_description"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textViewProposalsCellLocation"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignLeft="@+id/textViewProposalsCellDescription"
        android:layout_below="@+id/textViewProposalsCellDescription"
        android:focusable="false"
        android:paddingBottom="1dp"
        android:paddingTop="1dp"
        android:text="@string/proposal_location"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textViewProposalsCellStartTime"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignLeft="@+id/textViewProposalsCellLocation"
        android:layout_below="@+id/textViewProposalsCellLocation"
        android:focusable="false"
        android:paddingBottom="1dp"
        android:paddingTop="1dp"
        android:text="@string/start_time"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textViewProposalsCellInterested"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textViewProposalsCellLocation"
        android:focusable="false"
        android:paddingBottom="1dp"
        android:paddingTop="1dp"
        android:text="@string/interested"
        android:textSize="14sp" />

</RelativeLayout>