<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/description_label"
            style="@style/TextAppearance.Sherlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:background="@color/pressed_hang"
            android:paddingBottom="2dp"
            android:paddingLeft="10dp"
            android:paddingTop="2dp"
            android:text="@string/description"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="italic|bold" />

        <EditText
            android:id="@+id/editTextProposalDescription"
            style="@style/EditTextAppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/description_label"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:hint="@string/description_hint"
            android:inputType="text" />

        <TextView
            android:id="@+id/location_label"
            style="@style/TextAppearance.Sherlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextProposalDescription"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:background="@color/pressed_hang"
            android:paddingBottom="2dp"
            android:paddingLeft="10dp"
            android:paddingTop="2dp"
            android:text="@string/location"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="italic|bold" />

        <EditText
            android:id="@+id/editTextProposalLocation"
            style="@style/EditTextAppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/location_label"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:hint="@string/location_hint"
            android:inputType="text" />

        <TextView
            android:id="@+id/start_time_label"
            style="@style/TextAppearance.Sherlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/editTextProposalLocation"
            android:layout_below="@id/editTextProposalLocation"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:background="@color/pressed_hang"
            android:paddingBottom="2dp"
            android:paddingLeft="10dp"
            android:paddingTop="2dp"
            android:text="@string/start_time"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="italic|bold" />

        <TimePicker
            android:id="@+id/timePickerProposalStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/start_time_label"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp" />

        <Button
            android:id="@+id/buttonDone"
            style="@style/ButtonAppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/timePickerProposalStartTime"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@+id/helper"
            android:text="@string/done" />

        <View
            android:id="@+id/helper"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/buttonCancel"
            style="@style/ButtonAppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/timePickerProposalStartTime"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/helper"
            android:text="@string/cancel" />
    </RelativeLayout>

</ScrollView>