<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/confirm_proposal_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/confirm_proposal"
        android:textColor="@color/pressed_hang"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/confirm_your_prop_desc_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/confirm_proposal_header"
        android:layout_below="@id/confirm_proposal_header"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/description"
        android:textColor="@color/pressed_hang"
        android:textSize="12sp"
        android:textStyle="italic|bold" />

    <TextView
        android:id="@+id/confirm_your_proposal_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/confirm_your_prop_desc_title"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/confirm_your_prop_desc_title"
        android:text="@string/sample_user_proposal"
        android:textColor="@color/light_background"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/confirm_your_prop_loc_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/confirm_your_prop_desc_title"
        android:layout_below="@id/confirm_your_proposal_description"
        android:layout_marginTop="5dp"
        android:text="@string/location"
        android:textColor="@color/pressed_hang"
        android:textSize="12sp"
        android:textStyle="italic|bold" />

    <TextView
        android:id="@+id/confirm_your_proposal_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/confirm_your_prop_loc_title"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/confirm_your_prop_loc_title"
        android:text="@string/sample_user_proposal"
        android:textColor="@color/light_background"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/confirm_your_prop_time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/confirm_your_prop_loc_title"
        android:layout_below="@id/confirm_your_proposal_location"
        android:layout_marginTop="5dp"
        android:text="@string/time"
        android:textColor="@color/pressed_hang"
        android:textSize="12sp"
        android:textStyle="italic|bold" />

    <TextView
        android:id="@+id/confirm_your_proposal_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/confirm_your_prop_time_title"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/confirm_your_prop_time_title"
        android:text="@string/sample_user_proposal"
        android:textColor="@color/light_background"
        android:textSize="12sp" />

    <Button
        android:id="@+id/post_proposal_button"
        style="@style/ButtonAppTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/confirm_proposal_button" />

</RelativeLayout>