<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_action_bar"
    android:orientation="vertical" >

    <com.facebook.widget.ProfilePictureView
        android:id="@+id/profilePictureView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/profile"
        android:src="@drawable/ic_action_profile_icon" >
    </com.facebook.widget.ProfilePictureView>

    <TextView
        android:id="@+id/textViewClickIconToNudge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/profilePictureView"
        android:layout_below="@+id/profilePictureView"
        android:lines="2"
        android:text="@string/click_icon_to_nudge"
        android:textSize="12sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textViewFriendName"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignTop="@+id/profilePictureView"
        android:layout_toRightOf="@+id/profilePictureView"
        android:text="@string/no_user_name"
        android:textSize="16sp" />

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/textViewFriendName"
        android:layout_below="@+id/textViewFriendName" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </LinearLayout>
    </HorizontalScrollView>

    <fragment
        android:id="@+id/fragment1"
        android:name="com.hangapp.android.activity.fragment.ProposalFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewClickIconToNudge" />

</RelativeLayout>