<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/your_proposal_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/my_current_proposal"
        android:textSize="16sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/separatorButtonsFromBottom"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_below="@+id/your_proposal_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray" />

    <View
        android:id="@+id/separatorLeftRight"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/separatorTopBottom"
        android:layout_alignTop="@+id/separatorButtonsFromBottom"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:layout_toRightOf="@+id/your_prop_desc_title"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/your_proposal_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/your_prop_desc_title"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/separatorLeftRight"
        android:text="@string/sample_user_proposal"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/your_prop_loc_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/your_prop_desc_title"
        android:layout_below="@id/your_prop_desc_title"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/location"
        android:textSize="12sp"
        android:textStyle="bold" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_below="@+id/your_prop_loc_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/your_prop_time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/your_prop_loc_title"
        android:layout_below="@id/your_prop_loc_title"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/time"
        android:textSize="12sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/separatorTopBottom"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_below="@+id/your_prop_time_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:background="@android:color/darker_gray" />

    <View
        android:id="@+id/separatorIncomingOutgoingButtonsFromEachOther"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/buttonDeleteProposal"
        style="@style/ButtonAppTheme"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/trash_recyclebin_empty_closed"
        android:contentDescription="@string/delete_proposal" />

    <ImageView
        android:id="@+id/buttonChat"
        style="@style/ButtonAppTheme"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:background="@drawable/chat"
        android:contentDescription="@string/chat" />

    <com.facebook.widget.ProfilePictureView
        android:id="@+id/imageViewStatus3"
        style="@style/ButtonAppTheme"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/imageViewStatus2"
        android:layout_toRightOf="@+id/imageViewStatus2"
        android:background="@drawable/roster"
        android:contentDescription="@string/roster" />

    <com.facebook.widget.ProfilePictureView
        android:id="@+id/imageViewStatus4"
        style="@style/ButtonAppTheme"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/imageViewStatus3"
        android:layout_toRightOf="@+id/imageViewStatus3"
        android:background="@drawable/roster"
        android:contentDescription="@string/roster" />

    <com.facebook.widget.ProfilePictureView
        android:id="@+id/buttonRoster"
        style="@style/ButtonAppTheme"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/your_prop_time_title"
        android:layout_below="@+id/your_prop_time_title"
        android:layout_marginTop="38dp"
        android:background="@drawable/roster"
        android:contentDescription="@string/roster" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageViewStatus2"
        android:layout_alignLeft="@+id/your_proposal_title"
        android:text="@string/interested"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/imageViewStatus2"
        android:layout_marginTop="28dp"
        android:text="@string/confirmed"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <com.facebook.widget.ProfilePictureView
        android:id="@+id/ImageView05"
        style="@style/ButtonAppTheme"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/buttonRoster"
        android:layout_below="@+id/TextView01"
        android:background="@drawable/roster"
        android:contentDescription="@string/roster" />

    <com.facebook.widget.ProfilePictureView
        android:id="@+id/imageViewStatus2"
        style="@style/ButtonAppTheme"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/buttonRoster"
        android:layout_toRightOf="@+id/buttonRoster"
        android:background="@drawable/roster"
        android:contentDescription="@string/roster" />

    <com.facebook.widget.ProfilePictureView
        android:id="@+id/ImageView04"
        style="@style/ButtonAppTheme"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/ImageView05"
        android:layout_toRightOf="@+id/ImageView05"
        android:background="@drawable/roster"
        android:contentDescription="@string/roster" />

    <com.facebook.widget.ProfilePictureView
        android:id="@+id/ImageView06"
        style="@style/ButtonAppTheme"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/ImageView04"
        android:layout_toRightOf="@+id/ImageView04"
        android:background="@drawable/roster"
        android:contentDescription="@string/roster" />

    <com.facebook.widget.ProfilePictureView
        android:id="@+id/ImageView07"
        style="@style/ButtonAppTheme"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/TextView01"
        android:layout_toRightOf="@+id/ImageView06"
        android:background="@drawable/roster"
        android:contentDescription="@string/roster" />

    <TextView
        android:id="@+id/your_prop_desc_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/your_proposal_title"
        android:layout_below="@+id/separatorButtonsFromBottom"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/description"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/your_proposal_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/your_prop_time_title"
        android:layout_alignBottom="@+id/your_prop_time_title"
        android:layout_alignLeft="@+id/your_proposal_description"
        android:text="@string/sample_user_proposal"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/your_proposal_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/your_prop_loc_title"
        android:layout_alignBottom="@+id/your_prop_loc_title"
        android:layout_alignLeft="@+id/your_proposal_description"
        android:text="@string/sample_user_proposal"
        android:textSize="12sp" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/your_prop_desc_title"
        android:background="@android:color/darker_gray" />

</RelativeLayout>